--- a/install/game.distr/config/fs3skills_langs.yml
+++ b/install/game.distr/config/fs3skills_langs.yml
@@ -19,3 +19,5 @@ fs3skills:
     desc: Tribal language of Sagittaron.
   - name: Celtan
     desc: Spoken in some places on Virgon's moon, Hibernia.
+  starting_languages:
+  - Standard
